--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,12 @@
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/eventing
-spring.datasource.username=postgres
-spring.datasource.password=8080
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.application.name=eventing
 
-# JPA Configuration
+# JPA/Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Server Configuration
-server.port=8080
-
-# Application name
-spring.application.name=eventing
+# Swagger UI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
