--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('config', 'database.config.js'),
-  'models-path': path.resolve('models'),
-  'seeders-path': path.resolve('database', 'seeders'),
-  'migrations-path': path.resolve('database', 'migrations')
+  'config': path.resolve('dist/database/config.js'),
+  'models-path': path.resolve('dist/models'),
+  'seeders-path': path.resolve('dist/database/seeders'),
+  'migrations-path': path.resolve('dist/database/migrations')
 };
