--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "seed:generate": "npm run build && sequelize-cli seed:generate --name"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "@types/bcryptjs": "^2.4.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.0",
+    "@types/jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
