feat: event functionality

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,17 @@ DB_USER=username
 DB_PASSWORD=password
 NODE_ENV=development
 PORT=3000
+
+# Test Database
+TEST_DB_HOST=localhost
+TEST_DB_PORT=5432
+TEST_DB_NAME=eventing_test
+TEST_DB_USER=postgres
+TEST_DB_PASSWORD=
+
+# Production Database
+PROD_DB_HOST=localhost
+PROD_DB_PORT=5432
+PROD_DB_NAME=eventing_prod
+PROD_DB_USER=postgres
+PROD_DB_PASSWORD=
