--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,22 @@
-DB_HOST=localhost
+# Development Database
+DB_HOST=postgres
 DB_PORT=5432
-DB_NAME=database_name
-DB_USER=username
-DB_PASSWORD=password
+DB_NAME=eventing
+DB_USER=postgres
+DB_PASSWORD=postgres_password
 NODE_ENV=development
 PORT=3000
 
 # Test Database
-TEST_DB_HOST=localhost
+TEST_DB_HOST=postgres
 TEST_DB_PORT=5432
 TEST_DB_NAME=eventing_test
 TEST_DB_USER=postgres
-TEST_DB_PASSWORD=
+TEST_DB_PASSWORD=postgres_password
 
 # Production Database
-PROD_DB_HOST=localhost
+PROD_DB_HOST=postgres
 PROD_DB_PORT=5432
 PROD_DB_NAME=eventing_prod
 PROD_DB_USER=postgres
-PROD_DB_PASSWORD=
+PROD_DB_PASSWORD=postgres_password
